--- a/src/app/components/todas-las-reservas/todas-las-reservas.component.css
+++ b/src/app/components/todas-las-reservas/todas-las-reservas.component.css
@@ -1,21 +1,20 @@
-.colorButtonDelete{
-    color: red;
+.colorButtonDelete {
+  color: red;
 }
 
-.colorButtonUpdate{
-    color: #27a800;
+.colorButtonUpdate {
+  color: #27a800;
 }
 
-.tipoLetra{
-    
-    font-family: 'Playfair Display', serif;
-    font-size: medium;
+.tipoLetra {
+  font-family: "Playfair Display", serif;
+  font-size: medium;
 }
 
-table{
-    width: 100%;
+table {
+  width: 100%;
 }
 
 .example-spacer {
-    flex: 1 1 auto;
-  }
+  flex: 1 1 auto;
+}
