--- a/src/app/components/listado/listado.component.css
+++ b/src/app/components/listado/listado.component.css
@@ -1,10 +1,8 @@
-table{
-    width: 100%;
+table {
+  width: 100%;
 }
 
-.tipoLetra{
-    
-    font-family: 'Playfair Display', serif;
-    font-size: small;
+.tipoLetra {
+  font-family: "Playfair Display", serif;
+  font-size: small;
 }
-
