--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,55 +1,56 @@
 <app-navigation-header></app-navigation-header>
 <div class="contenedorLogin mt-4 mb-3">
-    <mat-card class="loginCard">
-      <mat-card-header class="botonLogin">
-        <mat-card-title class="tipoletra">Log in</mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src="../../assets/images/nuevalogin1.jpg"
-        alt="loginimagen" class="medidaimagenlogin">
-      <mat-card-content>
-        <form [formGroup]="loginForm">
-          <!--Campo del dni-->
-          <mat-form-field appearance="fill">
-            <mat-label>DNI</mat-label>
-            <input matInput placeholder="Tu dni con letra" formControlName="dni">
-            <mat-hint></mat-hint>
-            <!--Esto es una pequeña etiqueta para sugerencias de texto-->
-            <ng-container *ngIf="loginForm.controls.dni.errors != undefined">
-              <div class="errorValidacion" *ngIf="loginForm.controls.dni.errors.required">Debes introducir tu
-                dni
-              </div>
-              <div class="errorValidacion" *ngIf="loginForm.controls.dni.errors.minlength">Debe tener mínimo 9
-                caracteres</div>
-                <div class="errorValidacion" *ngIf="loginForm.controls.dni.errors.maxlength">Debe tener máximo 9
-                  caracteres</div>
-            </ng-container>
-          </mat-form-field>
-          <!--Fin del campo dni-->
+  <mat-card class="loginCard">
+    <mat-card-header class="botonLogin">
+      <mat-card-title class="tipoletra">Log in</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src="../../assets/images/nuevalogin1.jpg" alt="loginimagen" class="medidaimagenlogin">
+    <mat-card-content>
+      <form [formGroup]="loginForm">
+        <!--Campo del dni-->
+        <mat-form-field appearance="fill">
+          <mat-label>DNI</mat-label>
+          <input matInput placeholder="Tu dni con letra" formControlName="dni">
+          <mat-hint></mat-hint>
+          <!--Esto es una pequeña etiqueta para sugerencias de texto-->
+          <ng-container *ngIf="loginForm.controls.dni.errors != undefined">
+            <div class="errorValidacion" *ngIf="loginForm.controls.dni.errors.required">Debes introducir tu
+              dni
+            </div>
+            <div class="errorValidacion" *ngIf="loginForm.controls.dni.errors.minlength">Debe tener mínimo 9
+              caracteres</div>
+            <div class="errorValidacion" *ngIf="loginForm.controls.dni.errors.maxlength">Debe tener máximo 9
+              caracteres</div>
+          </ng-container>
+        </mat-form-field>
+        <!--Fin del campo dni-->
 
-          <!--Campo de la contraseña-->
-          <mat-form-field appearance="fill">
-            <mat-label>Contraseña</mat-label>
-            <input matInput [type]="ocultarPassword ? 'password' : 'text'" formControlName="password"
-              placeholder="Tu contraseña">
-            <button mat-icon-button matSuffix (click)="ocultarPassword = !ocultarPassword">
-              <mat-icon>{{ocultarPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-            <ng-container *ngIf="loginForm.controls.password.errors != undefined">
-              <div class="errorValidacion" *ngIf="loginForm.controls.password.errors.required">Debes introducir una
-                contraseña
-              </div>
-              <div class="errorValidacion" *ngIf="loginForm.controls.password.errors.minlength">Debes tener al menos 4 caracteres
-              </div>
-            </ng-container>
-          </mat-form-field>
-          <!--Fin del campo contraseña-->
-        </form>
-      </mat-card-content>
-      <mat-card-actions class="botonLogin mb-2">
-        <button mat-stroked-button color="primary" [disabled]="loginForm.invalid" class="temaBtnLogin mr-3" (click)="autenticarUsuario()"
-         >Entrar</button>
-        <a href="welcome"><button mat-stroked-button color="primary" class="temaBtnLogin" (click)="volverAwelcome()">Volver</button></a>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-  <app-footer></app-footer>
+        <!--Campo de la contraseña-->
+        <mat-form-field appearance="fill">
+          <mat-label>Contraseña</mat-label>
+          <input matInput [type]="ocultarPassword ? 'password' : 'text'" formControlName="password"
+            placeholder="Tu contraseña">
+          <button mat-icon-button matSuffix (click)="ocultarPassword = !ocultarPassword">
+            <mat-icon>{{ocultarPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <ng-container *ngIf="loginForm.controls.password.errors != undefined">
+            <div class="errorValidacion" *ngIf="loginForm.controls.password.errors.required">Debes introducir una
+              contraseña
+            </div>
+            <div class="errorValidacion" *ngIf="loginForm.controls.password.errors.minlength">Debes tener al menos 4
+              caracteres
+            </div>
+          </ng-container>
+        </mat-form-field>
+        <!--Fin del campo contraseña-->
+      </form>
+    </mat-card-content>
+    <mat-card-actions class="botonLogin mb-2">
+      <button mat-stroked-button color="primary" [disabled]="loginForm.invalid" class="temaBtnLogin mr-3"
+        (click)="autenticarUsuario()">Entrar</button>
+      <a href="welcome"><button mat-stroked-button color="primary" class="temaBtnLogin"
+          (click)="volverAwelcome()">Volver</button></a>
+    </mat-card-actions>
+  </mat-card>
+</div>
+<app-footer></app-footer>
