--- a/src/app/components/misreservas/misreservas.component.html
+++ b/src/app/components/misreservas/misreservas.component.html
@@ -1,70 +1,75 @@
 <app-navigation-header></app-navigation-header>
 <div class="container-fluid">
-<div class="row mt-4 mb-3">
-   <div class="col-md-6">
-    <ng-container *ngIf="!(listadoMisReservas.length == 0); else elseBlock">
+  <div class="row mt-4 mb-3">
+    <div class="col-md-6">
+      <ng-container *ngIf="!(listadoMisReservas.length == 0); else elseBlock">
         <h4 class="text-center tipoLetra ">Estas son tus reservas, {{usuarioAutenticado}}</h4>
 
-    <table mat-table [dataSource]="dataSourceTabla"> 
-      <ng-container matColumnDef="Nombre">
-        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th> 
-        <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.nombre}}</td> 
-      </ng-container> 
-      <ng-container matColumnDef="Apellidos">
-        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Apellidos</th> 
-        <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.apellidos}}</td> 
-      </ng-container> 
-      <ng-container matColumnDef="Fecha">
-        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Fecha de la reserva</th> 
-        <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.fecha | date:'dd/MM/yy HH:mm:ss a'}}</td> 
-      </ng-container> 
-      <ng-container matColumnDef="Horario" class="text-center">
-        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Horario</th> 
-        <span  *ngIf=""></span>
-        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><strong>{{hora.horas}}</strong></td> 
-      </ng-container> 
-      <ng-container matColumnDef="Cambiar" class="text-center">
-        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Cambiar</th> 
-        <span  *ngIf=""></span>
-        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-button [matMenuTriggerFor]="menu">
-            <mat-icon class="colorButtonUpdate" >update</mat-icon>
-        </button>
-            <mat-menu #menu="matMenu">
-              <ng-container *ngFor="let h of listadoHorasDisponibles">
-              <button mat-menu-item [value]="h.id_horario" (click)="updateReserva(hora.id_reservas, h.id_horario)">{{h.horas}}</button>
-            </ng-container>
-            </mat-menu></td> 
-      </ng-container> 
-      <ng-container matColumnDef="Eliminar" class="text-center">
-        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Eliminar</th> 
-        <span  *ngIf=""></span>
-        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" [value]="hora.id_reservas" (click)="deleteReserva(hora.id_reservas)"> 
-            <mat-icon class="colorButtonDelete" >delete</mat-icon>
-        </button></td> 
-      </ng-container> 
-      <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-      <tr mat-row *matRowDef="let hora; columns: columnas;"></tr>
-    </table> 
-    </ng-container>
-</div>
-<ng-template #elseBlock>
-  <p class="text-center text-danger mat-body-2">Aún no tienes ninguna reserva</p>
-</ng-template>
-<div class="col-md-6">
-    <mat-card class="example-card">
-        
+        <table mat-table [dataSource]="dataSourceTabla">
+          <ng-container matColumnDef="Nombre">
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th>
+            <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.nombre}}</td>
+          </ng-container>
+          <ng-container matColumnDef="Apellidos">
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Apellidos</th>
+            <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.apellidos}}</td>
+          </ng-container>
+          <ng-container matColumnDef="Fecha">
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Fecha de la reserva</th>
+            <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.fecha | date:'dd/MM/yy HH:mm:ss a'}}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="Horario" class="text-center">
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Horario</th>
+            <span *ngIf=""></span>
+            <td mat-cell *matCellDef="let hora" class="text-center pl-3"><strong>{{hora.horas}}</strong></td>
+          </ng-container>
+          <ng-container matColumnDef="Cambiar" class="text-center">
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Cambiar</th>
+            <span *ngIf=""></span>
+            <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-button [matMenuTriggerFor]="menu">
+                <mat-icon class="colorButtonUpdate">update</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <ng-container *ngFor="let h of listadoHorasDisponibles">
+                  <button mat-menu-item [value]="h.id_horario"
+                    (click)="updateReserva(hora.id_reservas, h.id_horario)">{{h.horas}}</button>
+                </ng-container>
+              </mat-menu>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="Eliminar" class="text-center">
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Eliminar</th>
+            <span *ngIf=""></span>
+            <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-icon-button color="primary"
+                aria-label="Example icon button with a menu icon" [value]="hora.id_reservas"
+                (click)="deleteReserva(hora.id_reservas)">
+                <mat-icon class="colorButtonDelete">delete</mat-icon>
+              </button></td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+          <tr mat-row *matRowDef="let hora; columns: columnas;"></tr>
+        </table>
+      </ng-container>
+    </div>
+    <ng-template #elseBlock>
+      <p class="text-center text-danger mat-body-2">Aún no tienes ninguna reserva</p>
+    </ng-template>
+    <div class="col-md-6">
+      <mat-card class="example-card">
+
         <img mat-card-image src="../../assets/images/reserva.jpeg" alt="Photo of a Shiba Inu">
         <mat-card-content class="">
           <p class="w-responsive justify text-center ">
-            Aquí encontrarás un listado con todas tus reservas activas. 
+            Aquí encontrarás un listado con todas tus reservas activas.
             Podrás cambiar la franja horaria disponible o eliminar la reserva
           </p>
         </mat-card-content>
-       
+
       </mat-card>
-      
-</div>
-</div>
+
+    </div>
+  </div>
 </div>
 
 <app-footer></app-footer>
