--- a/src/app/components/registro/registro.component.css
+++ b/src/app/components/registro/registro.component.css
@@ -1,32 +1,30 @@
 .loginCard {
-    max-width: 820px;
+  max-width: 820px;
 }
-.contenedorLogin{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.contenedorLogin {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 
 mat-form-field {
-    width: 100%;
+  width: 100%;
 }
 
-.botonLogin{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Playfair Display', serif !important;
+.botonLogin {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Playfair Display", serif !important;
 }
 
-.temaBtnLogin{
-    background-color:black;
-    color: white;
-    font-family: 'Playfair Display', serif !important;
+.temaBtnLogin {
+  background-color: black;
+  color: white;
+  font-family: "Playfair Display", serif !important;
 }
 
 .errorValidacion {
-    margin-top: 5px;
-    color: #27a800;
+  margin-top: 5px;
+  color: #27a800;
 }
