--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,193 +1,220 @@
 <app-navigation-header></app-navigation-header>
 <div class="container-fluid">
   <!--Carrusel-->
-<div class="row">
-  <div class="bd-example">
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../../assets/images/fondogym.jpeg" class="d-block w-100 holaimagen" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+  <div class="row">
+    <div class="bd-example">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../../assets/images/pelotas.jpg" class="d-block w-100 holaimagen" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../assets/images/2.jpeg" class="d-block w-100 holaimagen" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../assets/images/barra.jpeg" class="d-block w-100 holaimagen" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="../../assets/images/fondogym.jpeg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="../../assets/images/fondogym.jpeg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-          </div>
-        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+    </div>
+    <!--Fin Carrusel-->
+    <div class="col-lg-4">
+      <mat-card class="example-card text-center">
+        <mat-card-header class="text-center">
+          <div mat-card-avatar class="example-header-image"></div>
+
+          <mat-card-title class="text-center tipoLetra font-weight-bold justify w-responsive">Horarios</mat-card-title>
+          <mat-card-subtitle class="text-center justify w-responsive">Reserva la hora que mejor se adapte a ti
+          </mat-card-subtitle>
+
+        </mat-card-header>
+        <img mat-card-image src="../../assets/images/horario.jpg" alt="Photo of a Shiba Inu">
+        <mat-accordion class="">
+          <mat-expansion-panel hideToggle class="">
+          </mat-expansion-panel>
+          <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+              <mat-panel-title class="tipoLetra text-center justify w-responsive">
+                Horario de Lunes a Sábado
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <table class="text-center w-responsive justify">
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mañanas
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:00
+                  - 10:00</td>
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10:00
+                  - 11:00</td>
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11:00
+                  - 12:00</td>
+
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tardes
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;16:00
+                  - 17:00</td>
+
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;17:00
+                  - 18:00</td>
+
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;18:00
+                  - 19:00</td>
+
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;19:00
+                  - 20:00</td>
+
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;20:00
+                  - 21:00</td>
+
+              </tr>
+              <tr>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;21:00
+                  - 22:00</td>
+
+              </tr>
+
+            </table>
+          </mat-expansion-panel>
+        </mat-accordion>
+
+
+      </mat-card>
+    </div>
+
+    <div class="col-lg-4">
+      <mat-card class="example-card">
+        <mat-card-header class="text-center justify w-responsive">
+          <div mat-card-avatar class="example-header-image text-center"></div>
+          <mat-card-title class="text-center tipoLetra font-weight-bold justify w-responsive">¿Qué hacemos?
+          </mat-card-title>
+
+          <mat-card-subtitle class="text-center justify w-responsive">Ofrecemos una gran variedad de actividades
+          </mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="../../assets/images/entreno.jpg" alt="Photo of a Shiba Inu">
+        <mat-accordion>
+
+          <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+              <mat-panel-title class="tipoLetra text-center justify w-responsive">
+                Información de First Train
+              </mat-panel-title>
+
+            </mat-expansion-panel-header>
+            <p class="w-responsive justify text-center">
+              First Train es un centro de entrenamiento personal de nueva generación, que nace con la misión de
+              asesorar y ayudar a personas de muy distintos perfiles en la consecución de sus objetivos, ya sean
+              relacionados
+              con la salud, el bienestar, el rendimiento deportivo o la imagen corporal.
+            </p>
+            <p class="">
+              Modalidades:
+            </p>
+            <ul class="">
+              <li>Entrenamiento personal o dúo</li>
+              <li>Entrenamiento en grupos reducidos: 3 a 5 personas</li>
+            </ul>
+          </mat-expansion-panel>
+        </mat-accordion>
+
+        <mat-card-content>
+
+
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-4">
+      <mat-card class="example-card">
+        <mat-card-header class="text-center justify w-responsive">
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title class="text-center justify tipoLetra font-weight-bold w-responsive">Contacto</mat-card-title>
+          <mat-card-subtitle class="text-center justify w-responsive">Localízanos y pregunta sin compromiso
+          </mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="../../assets/images/contacto.jpg" alt="Photo of a Shiba Inu">
+        <mat-accordion>
+
+          <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+              <mat-panel-title class="tipoLetra">
+                ¿Dónde y Cómo Encontrarnos?
+              </mat-panel-title>
+
+            </mat-expansion-panel-header>
+
+            <!--Google map-->
+            <div class="map-responsive">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2057.224468194436!2d-4.372466235933006!3d37.326552769751686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6d83aa660feaa9%3A0xa675823fa945429d!2sFirst%20Train%20Centro%20de%20Entrenamiento%20Personal!5e0!3m2!1ses!2ses!4v1620501918660!5m2!1ses!2ses"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <!--Google Maps-->
+
+            <div class="text-center justify mt-3">
+              <p>Teléfono de contacto: 608 40 92 79</p>
+              <p>Email: <a href="mailto:repullo38@gmail.com">repullo38@gmail.com</a></p>
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </mat-card>
     </div>
   </div>
-   <!--Fin Carrusel-->
-  <div class="col-lg-4">
-<mat-card class="example-card text-center">
-  <mat-card-header class="text-center">
-    <div mat-card-avatar class="example-header-image"></div>
- 
-    <mat-card-title class="text-center tipoLetra font-weight-bold justify w-responsive">Horarios</mat-card-title>
-    <mat-card-subtitle class="text-center justify w-responsive">Reserva la hora que mejor se adapte a ti</mat-card-subtitle>
-
-  </mat-card-header>
-  <img mat-card-image src="../../assets/images/horario.jpg" alt="Photo of a Shiba Inu">
-  <mat-accordion class="">
-    <mat-expansion-panel hideToggle class="">
-    </mat-expansion-panel>
-    <mat-expansion-panel (opened)="panelOpenState = true"
-                         (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-        <mat-panel-title class="tipoLetra text-center justify w-responsive">
-          Horario de Lunes a Sábado
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-     
-<table class="text-center w-responsive justify">
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mañanas</td>
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:00 - 10:00</td>
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10:00 - 11:00</td>
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11:00 - 12:00</td>
-    
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tardes</td>
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;16:00 - 17:00</td>
-    
-  </tr> 
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;17:00 - 18:00</td>
-    
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;18:00 - 19:00</td>
-    
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;19:00 - 20:00</td>
-    
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;20:00 - 21:00</td>
-    
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;21:00 - 22:00</td>
-    
-  </tr>
-
-</table>
-    </mat-expansion-panel>
-  </mat-accordion>
-  
-
-</mat-card>
-  </div>
-
-  <div class="col-lg-4">
-<mat-card class="example-card">
-  <mat-card-header class="text-center justify w-responsive">
-    <div mat-card-avatar class="example-header-image text-center"></div>
-    <mat-card-title class="text-center tipoLetra font-weight-bold justify w-responsive">¿Qué hacemos?</mat-card-title>
-    
-    <mat-card-subtitle class="text-center justify w-responsive">Ofrecemos una gran variedad de actividades</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="../../assets/images/entreno.jpg" alt="Photo of a Shiba Inu">
-  <mat-accordion>
-    
-    <mat-expansion-panel (opened)="panelOpenState = true"
-                         (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-        <mat-panel-title class="tipoLetra text-center justify w-responsive">
-          Información de First Train
-        </mat-panel-title>
-        
-      </mat-expansion-panel-header>
-      <p class="w-responsive justify text-center">
-        First Train es un centro de entrenamiento personal de nueva generación, que nace con la misión de 
-        asesorar y ayudar a personas de muy distintos perfiles en la consecución de sus objetivos, ya sean relacionados
-        con la salud, el bienestar, el rendimiento deportivo o la imagen corporal.
-      </p>
-      <p class="">
-        Modalidades:
-      </p>
-      <ul class="">
-        <li>Entrenamiento personal o dúo</li>
-        <li>Entrenamiento en grupos reducidos: 3 a 5 personas</li>
-      </ul>
-    </mat-expansion-panel>
-  </mat-accordion>
-  
-  <mat-card-content>
-    
-  
-  </mat-card-content>
-</mat-card>
-  </div>
-
-<div class="col-lg-4">
-<mat-card class="example-card">
-  <mat-card-header class="text-center justify w-responsive">
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title class="text-center justify tipoLetra font-weight-bold w-responsive">Contacto</mat-card-title>
-    <mat-card-subtitle class="text-center justify w-responsive">Localízanos y pregunta sin compromiso</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="../../assets/images/contacto.jpg" alt="Photo of a Shiba Inu">
-  <mat-accordion>
-    
-    <mat-expansion-panel (opened)="panelOpenState = true"
-                         (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-        <mat-panel-title class="tipoLetra">
-          ¿Dónde y Cómo Encontrarnos?
-        </mat-panel-title>
-        
-      </mat-expansion-panel-header>
-     
-     <!--Google map-->
-     <div class="map-responsive">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2057.224468194436!2d-4.372466235933006!3d37.326552769751686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6d83aa660feaa9%3A0xa675823fa945429d!2sFirst%20Train%20Centro%20de%20Entrenamiento%20Personal!5e0!3m2!1ses!2ses!4v1620501918660!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-  <!--Google Maps-->
-
-  <div class="text-center justify mt-3">
-    <p>Teléfono de contacto: 608 40 92 79</p>
-    <p>Email: <a href="mailto:repullo38@gmail.com">repullo38@gmail.com</a></p>
-  </div>
-    </mat-expansion-panel>
-  </mat-accordion>
-</mat-card>
-  </div>
-</div>
 </div>
 <app-footer></app-footer>
